[package]
name = "wave_function_collapse"
version = "0.1.0"
edition = "2021"
description = "Implementation of wave function collapse algorithm"
license-file = "LICENSE"
repository = "https://gihtub.com/HumanEntity/wave_function_collapse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.test]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[dependencies]
rand = "0.8.5"
tikv-jemallocator = {version="0.5.0",optional=true}

[features]
default = []
jemalloc = ["dep:tikv-jemallocator"]
